--- a/src/main/webapp/assports.css
+++ b/src/main/webapp/assports.css
@@ -13,7 +13,7 @@ a{
 #showcase{
 	margin: 0;
 	padding: 0;
-	background: url('sport.jpg') no-repeat center/cover;
+	background: url('https://github.com/anusha-s97/firstmavendemo/blob/master/src/main/webapp/sport.jpg') no-repeat center/cover;
 	width: 100%;
 	height: 100vh; 
 	position: relative;
